platform/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: platform-gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-gateway-proxy
  listeners:
    - name: https
      hostname: "*.hacwa.co.uk"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: hacwa-co-uk-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All

    - name: jvb-udp
      port: 10000
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: All

    - name: syslog-udp
      port: 5514
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: All
